# django_mobile_app_version

./: .bumpversion.cfg  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  publish.yml
mobile_app_version/: __init__.py  models.py  serializers.py  tests.py  urls.py
mobile_app_version/adminapi/: permissions.py  urls.py  views.py
mobile_app_version/migrations/: 0001_initial.py
