[metadata]
name = django-mobile-app-version
version = 0.9.0
author = Mohammad Javad Nikbakht
author_email = javadnikbakht@mail.com
description = Django Mobile App Version is a package to add mobile app version service to your API.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2-Clause
url = https://github.com/javadnikbakht/django_mobile_app_version
project_urls =
    Release Notes =
    Source = https://github.com/javadnikbakht/django_mobile_app_version
    Tracker = https://github.com/javadnikbakht/django_mobile_app_version/issues
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Django Applications
[options]
python_requires = >=3.6
include_package_data = true
zip_safe = false
packages = find:
install_requires =
    djangorestframework >= 3
    packaging >= 21
